product detail footer adjusted

--- a/templates/product/detail.html
+++ b/templates/product/detail.html
@@ -255,6 +255,8 @@
                         <p class="text-center text-muted py-5">No reviews yet. Be the first to try this dish!</p>
                     {% endfor %}
 
+                    
+
                     <div class="d-flex justify-content-center mt-5">
                         <nav aria-label="Review pagination">
                             <ul class="pagination pagination-sm">
@@ -291,7 +293,7 @@
     </div>
 </section>
 
-<footer class="bg-dark text-white py-5 mt-5">
+<section class="bg-dark text-white py-5 mt-5">
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-4">
@@ -320,5 +322,5 @@
             &copy; 2026 E-Resto. All rights reserved.
         </div>
     </div>
-</footer>
+</section>
 {% endblock content %}
