Style template change password and reset passwword

--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -3,6 +3,13 @@
 {% block title %}Password changed{% endblock %}
 
 {% block content %}
-  <h1>Password changed</h1>
-  <p>Your password has been successfully changed. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+  
+  <div class="container" style="height:100%;">
+    <h1>Password changed</h1>
+    <div class="row" style="height:600px;">
+        <div class="col-md-6">
+            <p>Your password has been successfully changed. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+        </div>
+    </div>
+  </div>
 {% endblock %}
