--- a/templates/accounts/password_change_form.html
+++ b/templates/accounts/password_change_form.html
@@ -3,11 +3,72 @@
 {% block title %}Change your password{% endblock %}
 
 {% block content %}
-  <h1>Change your password</h1>
-  <p>Use the form below to change your password.</p>
-  <form method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Change"></p>
-    {% csrf_token %}
-  </form>
+  <div class="container mb-20 p-2">
+    <h1>Change your password</h1>
+    <p>Use the form below to change your password.</p>
+    <!-- <form method="post">
+      {{ form.as_p }}
+      <p><input type="submit" value="Change"></p>
+      {% csrf_token %}
+    </form> -->
+   <!-- <div class="row">
+      <div class="col-md-6">
+          <div clas="mt-2">
+              <form method="post" action="{% url 'accounts:password_change_done' %}" class="p-20 ">
+                  {% csrf_token %}
+                  <div class="row form-row">
+                      <div class="col-md-12 mb-3">                 
+                          <div class="input-group-icon">
+                              <i class="fas fa-key"></i> <label for="id_old_password" class="form-label ml-1">Old password :<span class="required-asterisk">*</span></label>
+                              <input type="text" name="old_password" class="form-control prefilled-value" id="id_old_password" value="" required>
+                          
+                          </div>
+                      </div>
+                    </div>
+                    <div class="row form-row">
+                      <div class="col-md-12 mb-3">                 
+                          <div class="input-group-icon">
+                            <i class="fas fa-key"></i> <label for="id_new_password1" class="form-label ml-1">New password: <span class="required-asterisk">*</span></label>
+                            <input type="text" name="new_password1" class="form-control prefilled-value" id="id_new_password1" value="" required>
+                          </div>
+                        
+                      </div>
+                    </div>
+                    <div class="row form-row">
+                      <div class="col-md-12 mb-3">                 
+                          <p>New password confirmation:</p>
+                          <p>Enter the same password as before, for verification.</p>
+                      </div>
+                    </div>           
+                    <div class="row form-row">
+                      <div class="col-md-12 mb-3">               
+                        <div class="input-group-icon">
+                            <i class="fas fa-key"></i> <label for="id_new_password2" class="form-label ml-1">New password confirmation:<span class="required-asterisk">*</span></label>
+                            <input type="text" name="new_password2" class="form-control" id="id_new_password2" placeholder="Enter your street address" value="{{current_user.address}}" required/>
+                        </div>
+                      </div>
+                    </div>
+                  
+                    <button type="submit" class="btn btn-place-order bg-info">
+                        <i class="fas fa-check-circle me-2"></i>Change
+                    </button>   
+              </form>
+          </div>
+        
+      </div>
+      <div class="col-md-6">
+          <ul>
+            <li>Your password can’t be too similar to your other personal information.</li>
+            <li>Your password must contain at least 8 characters.</li>
+            <li>Your password can’t be a commonly used password.</li>
+            <li>Your password can’t be entirely numeric.</li>
+            <li>Your password can’t be too similar to your other personal information.</li>
+          </ul>
+      </div>
+    </div> -->
+    
+  </div>
+  
+ 
+  
 {% endblock %}
