--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -3,6 +3,8 @@
 {% block title %}Password reset{% endblock %}
 
 {% block content %}
-  <h1>Password set</h1>
-  <p>Your password has been set. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+  <div class="container" style="height:100%;">
+    <h1>Password set</h1>
+    <p>Your password has been set. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+  </div>
 {% endblock %}
