--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -3,7 +3,13 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block content %}
-  <h1>Reset your password</h1>
-  <p>We've emailed you instructions for setting your password.</p>
-  <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+  <div class="container" style="height:100%;">
+    <h1>Reset your password</h1>
+    <div class="row" style="height:600px;">
+        <div class="col-md-6">
+             <p>We've emailed you instructions for setting your password.</p>
+            <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+        </div>
+    </div>
+  </div>
 {% endblock %}
