--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -44,7 +44,7 @@
               />
             </form>
             <p></p>
-            <p><a href="{% url "accounts:password_reset" %}">Forgotten your password?</a></p>
+            <p><a href="{% url "accounts:reset_password" %}">Forgotten your password?</a></p>
           </div>
         </div>
       </div>
