Sytle forget password page

--- a/templates/accounts/change_password_done.html
+++ b/templates/accounts/change_password_done.html
@@ -19,10 +19,10 @@
                         Your password has been updated successfully. You can now use your new password to log in.
                     </p>
                     <div class="d-grid gap-2">
-                        <a href="{% url 'account:logins' %}" class="btn btn-primary">
+                        <a href="{% url 'accounts:login' %}" class="btn btn-primary">
                             <i class="fas fa-user me-2"></i>Go to Profile
                         </a>
-                        <a href="{% url 'page:product_list' %}" class="btn btn-outline-secondary">
+                        <a href="{% url 'pages:product_list' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-home me-2"></i>Return to Product List
                         </a>
                     </div>
