--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -165,7 +165,7 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Total Posts
-                            <span class="badge bg-primary rounded-pill">{{ page_obj.paginator.count }}</span>
+                            <span class="badge bg-info rounded-pill">{{ page_obj.paginator.count }}</span>
                         </li>
                         {% if user.is_authenticated %}
                             <li class="list-group-item d-flex justify-content-between align-items-center">
