--- a/templates/orders/order/created.html
+++ b/templates/orders/order/created.html
@@ -9,7 +9,7 @@
     <h1>Thank you</h1>
     <p>Your order has been successfully completed. Your order number is
     <strong>{{ order.id }}</strong>.</p>
-    <p>Confirmation email will be sent to your registered email {{checkoutEmail}}</p>
+    <p>Confirmation email will be sent to your registered email or email is input at checkout page {{checkoutEmail}}</p>
   </div>
   
 {% endblock %}
