--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -35,7 +35,7 @@
               
               <li {% if 'dashboard' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
                 <!-- <a class="nav-link" href="{% url 'accounts:dashboard' %}"> <i class="fas fa-user-plus"></i> Welcome {{ user.username}} (dashboard) </a> -->
-                <a class="nav-link" href="{% url 'pages:index' %}"> <i class="fas fa-user-plus"></i> Welcome {{ user.username}} (dashboard) </a>
+                <a class="nav-link" href="{% url 'pages:product_list' %}"> <i class="fas fa-user-plus"></i> Welcome {{ user.username}} (dashboard) </a>
               </li>
               
               {% comment %} <li>
