--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -3,9 +3,12 @@
 {% block title %}Logged out{% endblock %}
 
 {% block content %}
-  <h1>Logged out</h1>
-  <p>
-    You have been successfully logged out.
-    You can <a href="{% url "login" %}">log-in again</a>.
-  </p>
+  <div class="container mb-20 p-2" style="height:600px">
+      <h1>Logged out</h1>
+      <p>
+        You have been successfully logged out.
+        You can <a href="/registration/login.html">log-in again</a>.
+      </p>
+  </div>
+  
 {% endblock %}
