--- a/templates/shopCart/detail.html
+++ b/templates/shopCart/detail.html
@@ -82,6 +82,7 @@
   <form action="{% url "coupons:apply" %}" method="post">
     {{ coupon_apply_form }}
     <input type="submit" value="Apply">
+    <button id='RemoveCouponbtn' style="background:#5993bb;font-size:14px;color:white;border-radius:4px;padding:10px 20px;border:0" type="button" value="" onClick="location.href='/coupons/remove'">Remove Coupons</button>
     {% csrf_token %}
   </form>
   <p class="text-right">
