product export csv

--- a/templates/admin/pages/product/change_list.html
+++ b/templates/admin/pages/product/change_list.html
@@ -4,4 +4,7 @@
     <li>
         <a href="import-csv/" class="addlink">Import CSV</a>
     </li>
+    <li>
+        <a href="export-csv/" class="addlink">Export CSV</a>
+    </li>
 {% endblock %}
