--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,9 +1,10 @@
 {% load static %}
 <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+    {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top"> {% endcomment %}
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #147040;" " sticky-top">
       <div class="container">
         <a class="navbar-brand" href={% url 'pages:index' %}>
-          <img src={% static "img/logo.png" %} class="logo" alt="" />
+          <img src={% static "img/new_logo.png" %} class="logo" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -17,19 +18,19 @@
           <ul class="navbar-nav">
             {% comment %} <li>{{ request.path }}</li> {% endcomment %}
             <li {% if '/' == request.path %} class="nav-item active mr-3" {% else %} class="nav-item  mr-3" {% endif %}>
-              <a class="nav-link" href={% url 'pages:product_list' %}>Home</a>
+              <a class="nav-link" href={% url 'pages:product_list' %}>立即訂餐</a>
             </li>
             <li {% if '/about' == request.path %} class="nav-item active mr-3" {% else %} class="nav-item  mr-3" {% endif %}>
-              <a class="nav-link" href={% url 'pages:about' %}>About</a>
+              <a class="nav-link" href={% url 'pages:about' %}>關於我們</a>
             </li>
             <li {% if '/comments/' == request.path %} class="nav-item active mr-3" {% else %} class="nav-item  mr-3" {% endif %} hidden>
-              <a class="nav-link" href={% url 'pages:index' %}>Comments</a>
+              <a class="nav-link" href={% url 'pages:index' %}>評論</a>
             </li>
           </ul>
 
           <ul class="navbar-nav ml-auto">
             <li {% if 'blogs' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
-              <a class="nav-link" href="{% url 'blogs:post_list' %}">Blog</a>
+              <a class="nav-link" href="{% url 'blogs:post_list' %}">留言區</a>
             </li>
             {% if user.is_authenticated %}            
               
@@ -64,16 +65,16 @@
             {% else %}   
               <li {% if 'password_reset' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
                 <a class="nav-link" href="{% url 'accounts:password_reset' %}">
-                  <i class="fas fa-user-plus"></i> Forgot password</a>
+                  <i class="fas fa-user-plus"></i> 忘記密碼</a>
               </li>
               <li {% if 'register' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
                 <a class="nav-link" href="{% url 'accounts:register' %}">
-                  <i class="fas fa-user-plus"></i> Register</a>
+                  <i class="fas fa-user-plus"></i> 登記</a>
               </li>
               <li {% if 'login' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
                 <a class="nav-link" href="{% url 'accounts:login' %}">
                   <i class="fas fa-sign-in-alt"></i>
-                  Login</a>
+                  登入</a>
               </li>
             {% endif %}
           </ul>
