--- a/templates/shopCart/detail.html
+++ b/templates/shopCart/detail.html
@@ -6,7 +6,10 @@
 {% endblock %}
 
 {% block content %}
+  
+  <div class="container">
   <h1>Your shopping cart</h1>
+  
   <table class="cart">
     <thead>
       <tr>
@@ -107,5 +110,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 {% endblock %}
