--- a/templates/blog/comment_list.html
+++ b/templates/blog/comment_list.html
@@ -3,7 +3,7 @@
 {% block title %}Comments Management{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container mb-5">
     <div class="row mb-4">
         <div class="col">
             <h1><i class="bi bi-chat-dots"></i> Comments Management</h1>
