--- a/templates/accounts/profile_form.html
+++ b/templates/accounts/profile_form.html
@@ -119,7 +119,7 @@
                                 </label>
                                 {{ form.profile_image }}
                                 {% if profile and profile.profile_image %}
-                                    <div class="mt-2">s
+                                    <div class="mt-2">
                                         <p class="mb-1">Current image:</p>
                                         <img src="{{ profile.profile_image.url }}" 
                                              alt="Current profile image" 
