--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <h1 class="card-title">{{ post.title }}</h1>
                     <p class="text-muted">
-                        By {{ post.author.username }} | {{ post.created_at|date:"F d, Y" }}
+                        By <a href="{% url 'accounts:profile_detail' post.author_id %}">{{ post.author.username }}</a> | {{ post.created_at|date:"F d, Y" }}
                     </p>
                     <hr>
                     <p class="card-text">{{ post.content|linebreaks }}</p>
@@ -56,7 +56,7 @@
                         {% for comment in comments %}
                             <div class="comment mb-3 pb-3 border-bottom">
                                 <div class="d-flex justify-content-between">
-                                    <strong>{{ comment.author.username }}</strong>
+                                    <strong><a href="{% url 'accounts:profile_detail' comment.author_id %}">{{ comment.author.username }}</a></strong>
                                     <small class="text-muted">{{ comment.created_at|timesince }} ago</small>
                                 </div>
                                 <p class="mb-1 mt-2">{{ comment.content }}</p>
