--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-    <footer id="main-footer" class="py-4 bg-primary text-white text-center">
+    <footer id="main-footer" class="py-4 text-white text-center" style="background-color: #147040;">
       Copyright &copy;
       <span class="year"></span> ERB8 SHOP
     </footer>
