--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -5,7 +5,7 @@
     {% endcomment %}
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #147040;" " sticky-top">
       <div class="container">
-        <a class="navbar-brand" href={% url 'pages:index' %}>
+        <a class="navbar-brand" href={% url 'pages:product_list' %}>
           <img src={% static "img/new_logo.png" %} class="logo" alt="" />
         </a>
         <button
