--- a/templates/base.html
+++ b/templates/base.html
@@ -27,21 +27,25 @@
     {% include 'partials/_topbar.html' %}
     <!-- navbar -->
     {% include 'partials/_navbar.html' %}
-    <div id="subheader">
-      <div class="cart">
-        {% with total_items=cart|length %}
-          {% if total_items > 0 %}
-            Your cart:
-            <a href="{% url 'cart:cart_detail' %}">
-              {{ total_items }} item{{ total_items|pluralize }},
-              ${{ cart.get_total_price }}
-            </a>
-          {% elif not order %}
-            Your cart is empty.
-          {% endif %}
-        {% endwith %}
+    {% if user.id is not None %}
+    <div class="container">
+      <div id="subheader">
+        <div class="cart">
+          {% with total_items=cart|length %}
+            {% if total_items > 0 %}
+              Your cart:
+              <a href="{% url 'cart:cart_detail' %}">
+                {{ total_items }} item{{ total_items|pluralize }},
+                ${{ cart.get_total_price }}
+              </a>
+            {% elif not order %}
+              Your cart is empty.
+            {% endif %}
+          {% endwith %}
+        </div>
       </div>
     </div>
+    {% endif %}
     <!-- conent -->
     {% block content %} {% endblock %}
     <!-- footer -->
