--- a/templates/accounts/profile_detail.html
+++ b/templates/accounts/profile_detail.html
@@ -41,11 +41,13 @@
                     </span>
                 {% endif %}
             </div>
+            {% if user.id == profile.user_id %}
             <div class="card-footer text-center">
                 <a href="{% url 'accounts:profile_update' profile.user_id %}" class="btn btn-warning me-2">
                     <i class="fas fa-edit me-1"></i>Edit
                 </a>
             </div>
+            {% endif %}
         </div>
         
         <!-- Contact Info -->
