--- a/templates/orders/order/create.html
+++ b/templates/orders/order/create.html
@@ -64,7 +64,7 @@
               <div class="col-md-6 mb-3">
                   
                   <div class="input-group-icon">
-                    <i class="fas fa-envelope"></i><label for="id_email" class="form-label">Email <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-envelope"></i><label for="id_email" class="form-label ml-1">Email <span class="required-asterisk">*</span></label>
                     <input type="text" name="email" class="form-control prefilled-value" id="id_email" value="{{current_user.email}}" required>
                   </div>
                   <div class="form-note">Pre-filled from your account</div>
@@ -94,6 +94,7 @@
           
           
     </form>
+  </div>
   <!-- <h1>Checkout</h1>
   <div class="order-info">
     <h3>Your order</h3>
