--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -48,7 +48,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="{% url 'pages:index' %}">
+          <a href="{% url 'pages:product_list' %}">
             <i class="fas fa-home"></i> Home</a
           >
         </li>
