--- a/templates/payment/canceled.html
+++ b/templates/payment/canceled.html
@@ -3,6 +3,8 @@
 {% block title %}Payment canceled{% endblock %}
 
 {% block content %}
+<div class="container">
   <h1>Your payment has not been processed</h1>
   <p>There was a problem processing your payment.</p>
+</div>  
 {% endblock %}
