--- a/templates/payment/completed.html
+++ b/templates/payment/completed.html
@@ -3,6 +3,8 @@
 {% block title %}Payment successful{% endblock %}
 
 {% block content %}
+<div class="container" style="height:500px;">
   <h1>Your payment was successful</h1>
   <p>Your payment has been processed successfully.</p>
+</div>
 {% endblock %}
