--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ img {
   margin-right: 0.4rem; }
 
 #showcase {
-  #background: url(../img/showcase.jpg) no-repeat center/cover fixed;
+  /* #background: url(../img/showcase.jpg) no-repeat center/cover fixed; */
   position: relative;
   min-height: 650px;
   color: #fff;
@@ -34,7 +34,7 @@ img {
     background: rgba(51, 51, 51, 0.8); }
 
 #services {
-  background: url(../img/building.jpg) no-repeat top center/cover fixed;
+  background: url(../img/building.png) no-repeat top center/cover fixed;
   min-height: 300px;
   position: relative;
   overflow: hidden; }
@@ -48,7 +48,7 @@ img {
     background: rgba(32, 134, 107, 0.8); }
 
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center/cover fixed;
+  background: url(../img/building.png) no-repeat top center/cover fixed;
   position: relative;
   overflow: hidden;
   min-height: 200px; }
@@ -59,7 +59,7 @@ img {
     left: 0;
     min-height: 100%;
     width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
+    background: rgba(189, 179, 31, 0.641); }
   #showcase-inner.showcase-search {
     min-height: 270px; }
 
@@ -94,17 +94,3 @@ img {
     font-size: 30px; }
   #showcase-inner h1 {
     font-size: 40px; } }
-
-
-
-/* Blue by default, Yellow on hover */
-.edit-btn-custom {
-    background-color: #0d6efd; /* Bootstrap Blue */
-    color: white;
-    transition: all 0.3s ease;
-}
-
-.edit-btn-custom:hover {
-    background-color: #ffc107; /* Bootstrap Warning Yellow */
-    color: #000; /* Dark text for better contrast on yellow */
-}
