--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -69,9 +69,40 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
           pariatur!
         </p> {% endcomment %}
-
+<!--
         {% comment %} <img src={% static "img/new_about.png" %} alt="" /> {% endcomment %}
         <img src="{% static 'img/new_about.png' %}" alt="" style="border-radius: 15px;" />
+-->
+{% comment %} This is a 綠茶餐廳 showcase begin {% endcomment %}
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{% static 'img/lb_dinning.png' %}" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'img/lb_kitchen.png' %}" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'img/lb_welcome.png' %}" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'img/new_about.png' %}" alt="Forth slide">
+    </div>
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+{% comment %} end {% endcomment %}
+
 
         <p class="mt-4">
           第一家綠茶餐廳於2008年開設於杭州西子湖畔一片美麗的龍井茶園中，故而得名。
@@ -107,24 +138,37 @@
             <div class="col-md-4 mb-4">
                 <h5 class="text-white fw-bold mb-3">營業時間</h5>
                 <p class="small text-muted" style="line-height: 1.8;">
-                星期一至日   11:00 - 22:00 <br>
-                公眾假期     11:00 - 22:00 <br>
-                公眾假期前夕  11:00 - 22:00
-                </p>
+                <div class="d-flex justify-content-between small text-muted">
+                <span>星期一至日</span>
+                <span class="time">11:00 - 22:00</span>
             </div>
-            <div class="col-md-2 mb-4">
-                <h6 class="text-white fw-bold mb-3">Navigation</h6>
+            
+<div class="d-flex justify-content-between small text-muted">
+    <span>公眾假期</span>
+    <span class="time">11:00 - 22:00</span>
+</div>
+<div class="d-flex justify-content-between small text-muted">
+    <span>公眾假期前夕</span>
+    <span class="time">11:00 - 22:00</span>
+</div>
+</table>
+            </div>
+           <div class="col-md-2 mb-4">
+               <!--  <h6 class="text-white fw-bold mb-3">Navigation</h6>
                 <ul class="list-unstyled small">
-                    <li class="mb-2"><a href="/" class="text-muted text-decoration-none hover-white">Home</a></li>
-                    <li class="mb-2"><a href="/menu" class="text-muted text-decoration-none hover-white">Full Menu</a></li>
-                    <li class="mb-2"><a href="#comments-section" class="text-muted text-decoration-none hover-white">Reviews</a></li>
-                </ul>
+                    <li class="mb-2"><a href="/" class="text-muted text-decoration-none hover-white">Home</a></li> 
+                    <li class="mb-2"><a href="/menu" class={% url 'pages:product_list' %}>立即訂餐</a></li>
+                    <li class="mb-2"><a href="#comments-section" class={% url 'blogs:post_list' %}>留言區</a></li> 
+                </ul>-->
             </div>
             <div class="col-md-3 mb-4 ms-auto">
-                <h6 class="text-white fw-bold mb-3">Visit Us</h6>
+                <h6 class="text-white fw-bold mb-3">聯絡我們</h6>
                 <ul class="list-unstyled small text-muted">
                     <li class="mb-2"><i class="bi bi-geo-alt me-2 text-primary"></i> 觀塘觀塘道518號創紀之城五期(apm)大堂高層UC-1號舖</li>
-                    <li class="mb-2"><i class="bi bi-telephone me-2 text-primary"></i> +852 63006168</li>
+                    <li class="mb-2"><i class="bi bi-telephone me-2 text-primary"></i> <i class="fas fa-phone">(852)-555-5555</i>
+                    <li class="mb-2"><i class="bi bi-email me-2 text-primary"></i><i class="fas fa-envelope-open"> contact@erb8shop.com</i>
+              </div>
+
                 </ul>
             </div>
         </div>
