--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,11 +1,10 @@
 {% load static %}
 <!-- Navbar -->
-    {% comment %} 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top"> 
-    {% endcomment %}
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #147040;" " sticky-top">
+
+    <!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #147040;" " sticky-top"> -->
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #147040;">
       <div class="container">
-        <a class="navbar-brand" href={% url 'pages:index' %}>
+        <!-- <a class="navbar-brand" href={% url 'pages:index' %}> -->
           <img src={% static "img/new_logo.png" %} class="logo" alt="" />
         </a>
         <button
